--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -325,6 +325,9 @@
     "allowNewAccountRegistration": "允许新账户注册",
     "missingRequiredFields": "缺少必填字段：{{fields}}",
     "oidcConfigurationUpdated": "OIDC 配置更新成功！",
+    "failedToFetchOidcConfig": "获取 OIDC 配置失败",
+    "failedToFetchRegistrationStatus": "获取注册状态失败",
+    "failedToFetchUsers": "获取用户列表失败",
     "oidcConfigurationDisabled": "OIDC 配置禁用成功！",
     "failedToUpdateOidcConfig": "更新 OIDC 配置失败",
     "failedToDisableOidcConfig": "禁用 OIDC 配置失败",
@@ -542,6 +545,11 @@
     "clickToSelectFile": "点击选择文件",
     "chooseFile": "选择文件",
     "uploading": "上传中...",
+    "uploadingFile": "正在上传 {{name}}...",
+    "creatingFile": "正在创建 {{name}}...",
+    "creatingFolder": "正在创建 {{name}}...",
+    "deletingItem": "正在删除 {{type}} {{name}}...",
+    "renamingItem": "正在重命名 {{type}} {{oldName}} 为 {{newName}}...",
     "createNewFile": "创建新文件",
     "fileName": "文件名",
     "creating": "创建中...",
