Optimize credentials interface and add i18n improvements
- Merge upload/paste tabs into unified SSH key input interface
- Remove manual key type selection dropdown (rely on auto-detection)
- Add public key generation from private key functionality
- Complete key pair validation removal to fix errors
- Add missing translation keys for better internationalization
- Improve UX with streamlined credential editing workflow

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -130,7 +130,20 @@
     "folderRenamed": "Folder \"{{oldName}}\" renamed to \"{{newName}}\" successfully",
     "failedToRenameFolder": "Failed to rename folder",
     "movedToFolder": "Credential \"{{name}}\" moved to \"{{folder}}\" successfully",
-    "failedToMoveToFolder": "Failed to move credential to folder"
+    "failedToMoveToFolder": "Failed to move credential to folder",
+    "sshPublicKey": "SSH Public Key",
+    "publicKeyNote": "Public key is optional but recommended for key validation",
+    "publicKeyUploaded": "Public Key Uploaded",
+    "uploadPublicKey": "Upload Public Key",
+    "uploadPrivateKeyFile": "Upload Private Key File",
+    "uploadPublicKeyFile": "Upload Public Key File",
+    "privateKeyRequiredForGeneration": "Private key is required to generate public key",
+    "failedToGeneratePublicKey": "Failed to generate public key",
+    "generatePublicKey": "Generate from Private Key",
+    "publicKeyGeneratedSuccessfully": "Public key generated successfully",
+    "detectedKeyType": "Detected key type",
+    "detectingKeyType": "detecting...",
+    "optional": "Optional"
   },
   "sshTools": {
     "title": "SSH Tools",
@@ -878,6 +891,7 @@
     "password": "password",
     "keyPassword": "key password",
     "pastePrivateKey": "Paste your private key here...",
+    "pastePublicKey": "Paste your public key here...",
     "credentialName": "My SSH Server",
     "description": "SSH credential description",
     "searchCredentials": "Search credentials by name, username, or tags...",
