--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -129,7 +129,20 @@
     "folderRenamed": "文件夹\"{{oldName}}\"已成功重命名为\"{{newName}}\"",
     "failedToRenameFolder": "重命名文件夹失败",
     "movedToFolder": "凭据\"{{name}}\"已成功移动到\"{{folder}}\"",
-    "failedToMoveToFolder": "移动凭据到文件夹失败"
+    "failedToMoveToFolder": "移动凭据到文件夹失败",
+    "sshPublicKey": "SSH公钥",
+    "publicKeyNote": "公钥是可选的，但建议提供以验证密钥对",
+    "publicKeyUploaded": "公钥已上传",
+    "uploadPublicKey": "上传公钥",
+    "uploadPrivateKeyFile": "上传私钥文件",
+    "uploadPublicKeyFile": "上传公钥文件",
+    "privateKeyRequiredForGeneration": "生成公钥需要先输入私钥",
+    "failedToGeneratePublicKey": "生成公钥失败",
+    "generatePublicKey": "从私钥生成",
+    "publicKeyGeneratedSuccessfully": "公钥生成成功",
+    "detectedKeyType": "检测到的密钥类型",
+    "detectingKeyType": "检测中...",
+    "optional": "可选"
   },
   "sshTools": {
     "title": "SSH 工具",
@@ -874,6 +887,7 @@
     "searchCredentials": "按名称、用户名或标签搜索凭据...",
     "keyPassword": "密钥密码",
     "pastePrivateKey": "在此粘贴您的私钥...",
+    "pastePublicKey": "在此粘贴您的公钥...",
     "sshConfig": "端点 SSH 配置",
     "homePath": "/home",
     "clientId": "您的客户端 ID",
