Implement modern file manager with drag-and-drop interface
Major UI/UX improvements to replace clunky sidebar with modern grid layout:

- Add FileManagerModern component with grid-based file browser
- Implement drag-and-drop file upload with validation and progress
- Add comprehensive context menu with file operations (copy/cut/paste/delete)
- Create intelligent file selection system with multi-select support
- Add modern toolbar with search, view switching, and file operations
- Integrate seamless view switching between classic and modern interfaces
- Support keyboard shortcuts and accessibility features
- Add complete i18n support for all new interface elements

Technical components:
- FileManagerGrid: Grid layout with breadcrumb navigation
- FileManagerContextMenu: Right-click context menu system
- useFileSelection: Hook for managing file selection state
- useDragAndDrop: Hook for handling drag-and-drop operations
- View switching logic integrated into main FileManager component

The modern interface is now the default while maintaining backward compatibility.
Users can switch between modern and classic views seamlessly.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -627,6 +627,33 @@
     "folderCreatedSuccessfully": "Folder \"{{name}}\" created successfully",
     "failedToCreateFolder": "Failed to create folder",
     "itemDeletedSuccessfully": "{{type}} deleted successfully",
+    "itemsDeletedSuccessfully": "{{count}} items deleted successfully",
+    "failedToDeleteItems": "Failed to delete items",
+    "dragFilesToUpload": "Drop files here to upload",
+    "emptyFolder": "This folder is empty",
+    "itemCount": "{{count}} items",
+    "selectedCount": "{{count}} selected",
+    "searchFiles": "Search files...",
+    "upload": "Upload",
+    "selectHostToStart": "Select a host to start file management",
+    "failedToConnect": "Failed to connect to SSH",
+    "failedToLoadDirectory": "Failed to load directory",
+    "noSSHConnection": "No SSH connection available",
+    "enterFolderName": "Enter folder name:",
+    "enterFileName": "Enter file name:",
+    "copy": "Copy",
+    "cut": "Cut",
+    "paste": "Paste",
+    "delete": "Delete",
+    "properties": "Properties",
+    "preview": "Preview",
+    "refresh": "Refresh",
+    "downloadFiles": "Download {{count}} files",
+    "copyFiles": "Copy {{count}} items",
+    "cutFiles": "Cut {{count}} items",
+    "deleteFiles": "Delete {{count}} items",
+    "filesCopiedToClipboard": "{{count}} items copied to clipboard",
+    "filesCutToClipboard": "{{count}} items cut to clipboard",
     "failedToDeleteItem": "Failed to delete item",
     "itemRenamedSuccessfully": "{{type}} renamed successfully",
     "failedToRenameItem": "Failed to rename item",
