修复文件管理器多个关键问题
- 修复侧边栏API路由问题：将数据API从fileManagerApi(8084)切换到authApi(8081)
- 实现PIN功能：添加文件固定/取消固定功能，支持右键菜单操作
- 修复FileWindow组件props传递错误：正确传递file对象和sshHost参数
- 添加侧边栏数据刷新机制：PIN/Recent/Shortcut操作后自动更新显示
- 修复目录树展开问题：handleItemClick正确传递folderPath参数
- 新增FileManagerSidebar组件：支持Recent、Pinned、Shortcuts和目录树

主要修复：
1. API路由从localhost:8084/ssh/file_manager/* 修正为 localhost:8081/ssh/file_manager/*
2. 双击文件不再报错"Cannot read properties of undefined (reading 'name')"
3. 侧边栏实时同步数据更新，提升用户体验

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -726,7 +726,10 @@
     "terminalWithPath": "Terminal - {{host}}:{{path}}",
     "runningFile": "Running - {{file}}",
     "onlyRunExecutableFiles": "Can only run executable files",
-    "noHostSelected": "No host selected"
+    "noHostSelected": "No host selected",
+    "starred": "Starred",
+    "shortcuts": "Shortcuts",
+    "directories": "Directories"
   },
   "tunnels": {
     "title": "SSH Tunnels",
