Fix hardcoded text and add missing i18n translations in file manager
- Add 18 new translation keys for file manager sidebar and context menu operations
- Replace hardcoded Chinese text with t() function calls in FileManagerSidebar.tsx:
  * Toast messages for remove/unpin/clear operations
  * Context menu items for recent files, pinned files, and shortcuts
- Replace hardcoded Chinese text with t() function calls in FileManagerContextMenu.tsx:
  * Pin/unpin file menu items
  * Add to shortcuts menu item
  * Save to system menu items with dynamic count support
- Add bilingual support for all new strings (English and Chinese)
- Improve consistency with existing i18n patterns

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -729,7 +729,25 @@
     "noHostSelected": "No host selected",
     "starred": "Starred",
     "shortcuts": "Shortcuts",
-    "directories": "Directories"
+    "directories": "Directories",
+    "removedFromRecentFiles": "Removed \"{{name}}\" from recent files",
+    "removeFailed": "Remove failed",
+    "unpinnedSuccessfully": "Unpinned \"{{name}}\" successfully",
+    "unpinFailed": "Unpin failed",
+    "removedShortcut": "Removed shortcut \"{{name}}\"",
+    "removeShortcutFailed": "Remove shortcut failed",
+    "clearedAllRecentFiles": "Cleared all recent files",
+    "clearFailed": "Clear failed",
+    "removeFromRecentFiles": "Remove from recent files",
+    "clearAllRecentFiles": "Clear all recent files",
+    "unpinFile": "Unpin file",
+    "removeShortcut": "Remove shortcut",
+    "saveFilesToSystem": "Save {{count}} files to system",
+    "saveToSystem": "Save to system",
+    "pinFile": "Pin file",
+    "addToShortcuts": "Add to shortcuts",
+    "selectLocationToSave": "Select location to save",
+    "downloadToDefaultLocation": "Download to default location"
   },
   "tunnels": {
     "title": "SSH Tunnels",
