--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -736,7 +736,25 @@
     "cannotSaveFile": "无法保存文件",
     "starred": "收藏",
     "shortcuts": "快捷方式",
-    "directories": "目录"
+    "directories": "目录",
+    "removedFromRecentFiles": "已从最近访问中移除\"{{name}}\"",
+    "removeFailed": "移除失败",
+    "unpinnedSuccessfully": "已取消固定\"{{name}}\"",
+    "unpinFailed": "取消固定失败",
+    "removedShortcut": "已移除快捷方式\"{{name}}\"",
+    "removeShortcutFailed": "移除快捷方式失败",
+    "clearedAllRecentFiles": "已清除所有最近访问记录",
+    "clearFailed": "清除失败",
+    "removeFromRecentFiles": "从最近访问中移除",
+    "clearAllRecentFiles": "清除所有最近访问",
+    "unpinFile": "取消固定",
+    "removeShortcut": "移除快捷方式",
+    "saveFilesToSystem": "保存 {{count}} 个文件到系统",
+    "saveToSystem": "保存到系统",
+    "pinFile": "固定文件",
+    "addToShortcuts": "添加到快捷方式",
+    "selectLocationToSave": "选择位置保存",
+    "downloadToDefaultLocation": "下载到默认位置"
   },
   "tunnels": {
     "title": "SSH 隧道",
